Fixed issue with selecting HostVanDetail categories would cause grid layout to stretch

--- a/src/pages/styling/HostVanSelectionLayout.css
+++ b/src/pages/styling/HostVanSelectionLayout.css
@@ -62,3 +62,8 @@ img.hvd-image {
     flex-direction: row;
     gap: 1em;
 }
+
+.hvd-subcontent {
+    grid-row: 3/4;
+    grid-column: 1/-1;
+}
